# example_with_behavior_tree_cpp

./: CMakeLists.txt  README.md  install_from_source.sh  main_launcher.sh  package.xml
configs/mission/: mission.xml
launch/: behavior_tree_cpp.launch
src/controller/includeBTCPP/: add_belief.h  behavior_task.h  global.h  query_belief.h  remove_belief.h
src/controller/sourceBTCPP/: add_belief.cpp  behavior_task.cpp  behavior_tree_main.cpp  query_belief.cpp  remove_belief.cpp
